[package]
name = "tiddly-wiki-server"
description = "A web back-end for a TiddlyWiki"
repository = "https://github.com/nathanielknight/tiddly-wiki-server"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"


[dependencies]
axum = "0.6"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3", default-features = false, features=["fs"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28", features = ["serde_json", "bundled"] }
clap = { version = "=4.5.13", features = ["derive", "env"]}
