[package]
name = "tiddly-wiki-server"
description = "An efficient, low-maintenance web server for TiddlyWikis."
repository = "https://github.com/nathanielknight/tiddly-wiki-server"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"


[dependencies]
axum = "0.7"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", default-features = false, features=["fs"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28", features = ["serde_json", "bundled"] }
clap = { version = "^4.5", features = ["derive", "env"]}

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"
